force-app/main/default/objects/TimeSheet__c/TimeSheet__c.object-meta.xml
<CustomObject>
    <label>TimeSheet</label>
    <nameField>
        <label>TimeSheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeSheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>