force-app/main/default/objects/TimeSheet__c/fields/Extra_hours_worked_in_a_week__c.field-meta.xml
<CustomField>
    <fullName>Extra_hours_worked_in_a_week__c</fullName>
    <formula>Total_hours_worked_in_a_week__c  -  Supposed_working_hours_per_week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra hours worked in a week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>