force-app/main/default/objects/TimeSheet__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <length>20</length>
    <type>Text</type>
</CustomField>