force-app/main/default/objects/TimeSheet__c/fields/Supposed_working_hours_per_day__c.field-meta.xml
<CustomField>
    <fullName>Supposed_working_hours_per_day__c</fullName>
    <label>Supposed working hours per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>