force-app/main/default/objects/TimeSheet__c/fields/Supposed_working_hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>Supposed_working_hours_per_week__c</fullName>
    <label>Supposed working hours per week</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>