force-app/main/default/objects/TimeSheet__c/fields/Total_hours_worked_in_a_week__c.field-meta.xml
<CustomField>
    <fullName>Total_hours_worked_in_a_week__c</fullName>
    <formula>Monday__c  +  Tuesday__c  +  Wednesday__c  +  Thursday__c  +  Friday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total hours worked in a week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>